kubernetes/nginx/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.fanen.dk`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: fanen-dk-staging-tls
